--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ numpy = "^1.26.0"
 matplotlib = "^3.8.0"
 seaborn = "^0.13.0"
 jupyter = "^1.0.0"
+peft = "^0.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
